# meltano-state-backend-fsspec

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
fixtures/project/: meltano.yml
src/meltano_state_backend_fsspec/: __init__.py  manager.py  settings.py
tests/: test_azure.py  test_local.py  test_manager.py  test_s3.py  test_sftp.py
