[project]
name = "meltano-state-backend-fsspec"
version = "0.1.0"
description = "A state backend for Meltano that uses fsspec to support arbitrary filesystems."
readme = "README.md"
authors = [
    { name = "Edgar Ramírez Mondragón", email = "edgarrm358@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2025.9.0",
    "meltano>=3.9.0",
    "typing-extensions>=4.15.0 ; python_full_version < '3.12'",
    "universal-pathlib>=0.3",
]
optional-dependencies.azure = [
    "fsspec[abfs]",
]
optional-dependencies.gcs = [
    "fsspec[gcs]",
]
optional-dependencies.s3 = [
    "fsspec[s3]",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "testing" },
    { include-group = "typing" },
]
testing = [
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "time-machine>=2.19.0",
]
typing = [
    "backports-strenum>=1.3.1",
    "mypy>=1.18.2",
    "ty>=0.0.1a21",
]

[project.entry-points."meltano.settings"]
protocol = "meltano_state_backend_fsspec:PROTOCOL"
storage_options = "meltano_state_backend_fsspec:STORAGE_OPTIONS"
s3_key = "meltano_state_backend_fsspec:S3_KEY"
s3_secret = "meltano_state_backend_fsspec:S3_SECRET"
s3_endpoint_url = "meltano_state_backend_fsspec:S3_ENDPOINT_URL"
gcs_project = "meltano_state_backend_fsspec:GCS_PROJECT"
gcs_token = "meltano_state_backend_fsspec:GCS_TOKEN"
gcs_endpoint_url = "meltano_state_backend_fsspec:GCS_ENDPOINT_URL"
azure_connection_string = "meltano_state_backend_fsspec:AZURE_CONNECTION_STRING"
azure_account_name = "meltano_state_backend_fsspec:AZURE_ACCOUNT_NAME"
azure_account_key = "meltano_state_backend_fsspec:AZURE_ACCOUNT_KEY"

[project.entry-points."meltano.state_backends"]
fsspec = "meltano_state_backend_fsspec:FSSpecStateStoreManager"

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "typing",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
  "coverage",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [ "testing" ]
commands = [ [ "coverage", "run", "-m", "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.coverage]
depends = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
]
dependency_groups = [ "testing" ]
commands = [
  [ "coverage", "combine", "--debug=pathmap" ],
  [ "coverage", "report", "--show-missing", "--fail-under=100" ],
  [ "coverage", "xml" ],
]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [
    "mypy",
    "--strict",
    { replace = "posargs", default = [
      "src/meltano_state_backend_fsspec",
      "tests",
    ], extend = true },
  ],
  [
    "ty",
    "check",
    { replace = "posargs", default = [
      "src/meltano_state_backend_fsspec",
      "tests",
    ], extend = true },
  ],
]


[tool.coverage.paths]
package = [
  "src/meltano_state_backend_fsspec/",
  "*/site-packages/meltano_state_backend_fsspec/",
]

[tool.coverage.run]
branch = true
source = [
  "meltano_state_backend_fsspec",
  "tests",
]
parallel = true
relative_files = true

[tool.coverage.report]
exclude_also = [
  '''if (t\.)?TYPE_CHECKING:''',
]

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88

[tool.uv]
prerelease = "allow"

[tool.uv.sources]
meltano = { git = "https://github.com/meltano/meltano.git" }
